--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@eslint/js": "9.22.0",
     "@fortawesome/fontawesome-free": "7.1.0",
+    "@mistweaverco/mdsvex-shiki": "1.1.1",
     "@sveltejs/adapter-static": "3.0.10",
     "@sveltejs/kit": "2.47.3",
     "@sveltejs/vite-plugin-svelte": "6.2.1",
