--- a/web/package.json
+++ b/web/package.json
@@ -22,10 +22,12 @@
     "@sveltejs/vite-plugin-svelte": "6.2.1",
     "@tailwindcss/vite": "4.0.13",
     "@types/eslint": "9.6.1",
+    "@types/node": "25.0.3",
     "daisyui": "5.0.2",
     "eslint": "9.38.0",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-svelte": "3.12.5",
+    "glob": "13.0.0",
     "globals": "16.0.0",
     "husky": "9.1.7",
     "install": "0.13.0",
@@ -43,6 +45,7 @@
     "typescript": "5.9.3",
     "typescript-eslint": "8.26.1",
     "vite": "7.1.12",
-    "vitest": "4.0.3"
+    "vitest": "4.0.3",
+    "yaml": "2.8.2"
   }
 }
