--- a/.luarc.json
+++ b/.luarc.json
@@ -1,16 +1,21 @@
 {
+  "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
   "runtime.version": "LuaJIT",
-  "runtime.path": [
-    "lua/?.lua",
-    "lua/?/init.lua"
-  ],
   "diagnostics.globals": [
-    "vim"
+    "vim",
+    "std",
+    "read_globals",
+    "stds",
+    "globals"
   ],
+  "runtime.settings.path": [
+    "?.lua",
+    "?/init.lua"
+  ],
+  "workspace.checkThirdParty": false,
   "workspace.library": [
-    "$VIMRUNTIME/lua",
-    "${3rd}/luv/library"
-  ],
-  "workspace.checkThirdParty": false
+    "$VIMRUNTIME",
+    "${3rd}/luv/library",
+    "./test/tmp/plugins/plenary.nvim"
+  ]
 }
-
